* The XML report produced by the `ConsoleLauncher` and Gradle plugin is no longer invalid
  when the exception message of a failed test contains the XML CDATA end marker `]]>`.
* The `ConsoleLauncher`, the Gradle plugin, and the Maven Surefire provider now attempt to
  write a valid class name into the `classname` attribute of `<testcase/>` elements in the
  XML reports. In addition, the `name` attribute of dynamic tests and test template
  invocations (such as repeated and parameterized tests) is now suffixed with the index of
  the invocation so they are distinguishable by reporting tools.
* The Maven Surefire provider now includes the method parameter types when writing the
  `name` attribute of `<testcase/>` elements into XML reports. However, due to a
  limitation of Maven Surefire, instead of `methodName(Type)` they are written as
  `methodName{Type}`.

===== New Features and Improvements

* The JUnit Platform Maven Surefire provider now runs all specified tests in a single
  test run, i.e. all registered `TestExecutionListeners` will receive a single `TestPlan`.
  Previously, a separate `TestPlan` was discovered and executed for each test class.
* New `SUMMARY` details mode for the `ConsoleLauncher` and Gradle plugin which prints
  the table of success and failure counts at the end of test plan execution. This new
  mode is analogous to the previous behavior of the `NONE` details mode.
* The Maven Surefire provider now supports the `test` parameter that tells Surefire to
  only execute a subset of test classes or methods, e.g. by specifying `-Dtest=...` on the
  command line (see the
  http://maven.apache.org/surefire/maven-surefire-plugin/test-mojo.html#test[Surefire documentation]
  for details).


[[release-notes-5.0.3-junit-jupiter]]
==== JUnit Jupiter

===== Bug Fixes

* The `@Tag` and `@Tags` annotations are now inherited within test class hierarchies.


[[release-notes-5.0.3-junit-vintage]]
==== JUnit Vintage

No changes.