@@ -46,6 +46,9 @@ _@API Guardian_ JAR _mandatory_ again.
   `name` attribute of `<testcase/>` elements into XML reports. However, due to a
   limitation of Maven Surefire, instead of `methodName(Type)` they are written as
   `methodName{Type}`.
+* Non-inherited _composed annotations_ which are meta-annotated with a given `@Inherited`
+  annotation are now considered to be implicitly _inherited_ when searching for the given
+  meta-annotation within a class hierarchy.
 
 ===== New Features and Improvements
 
@@ -68,6 +71,13 @@ _@API Guardian_ JAR _mandatory_ again.
 ===== Bug Fixes
 
 * The `@Tag` and `@Tags` annotations are now inherited within test class hierarchies.
+* Due to a change in the JUnit Platform's `AnnotationUtils` class, non-inherited
+  _composed annotations_ which are meta-annotated with a given `@Inherited` annotation
+  are now considered to be implicitly _inherited_ when searching for the given
+  meta-annotation within a class hierarchy.
+** For example, an `@Inherited` annotation such as `@TestInstance` will now be discovered
+   on a custom _composed annotation_ declared on a superclass even if the _composed
+   annotation_ is not declared as `@Inherited`.
 
 
 [[release-notes-5.0.3-junit-vintage]]
